<resources>
    <string name="app_name">MyAlarm</string>
    <string name="title">闹铃</string>
    <string name="add_alarm">添加闹铃</string>
    <string name="back">返回</string>
    <string name="alarmMode">模式</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="one">日</string>
    <string name="two">一</string>
    <string name="three">二</string>
    <string name="four">三</string>
    <string name="five">四</string>
    <string name="six">五</string>
    <string name="seven">六</string>
    <string name="tag_text">标签</string>
    <string name="vibrate_text">振动</string>
    <string name="sound_text">声音</string>
    <string name="no_day_of_week_selected">没有选中一周的某一天</string>
    <string name="no_day_of_month_selected">没有选中月的某一天</string>
</resources>
